deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gowait
  labels:
    app: gowait
spec:
  selector:
    app: gowait
  ports:
    - name: http
      port: 80
      targetPort: http
